--- a/.env
+++ b/.env
@@ -1,9 +1,14 @@
 REACT_APP_COMPANY_NAME=KALINIHTA DIGITAL LTD
 REACT_APP_COUNTRY=United Kingdom
 REACT_APP_ADDRESS=160 Great Portland Street, London, W1W 5QA, United Kingdom
-REACT_APP_COMPANY_BIRTH=January 8, 2025
+REACT_APP_COMPANY_BIRTH=August 2025
 REACT_APP_OWNER=Orlin Alyoshov Dadiov
 REACT_APP_SUPPORT_EMAIL=support@kalinidigital.com
-REACT_APP_PHONE_NUMBER=+111111111111
-REACT_APP_TELEGRAM_BOT=https://t.me/KalinihtaDigitalBotCngeMe
+REACT_APP_PHONE_NUMBER=+447365924922
+REACT_APP_TELEGRAM_BOT=https://t.me/EUredirect789bot
 REACT_APP_SITE_URL=https://kalinidigital.com
+
+REACT_APP_TELEGRAM_BOT_TOKEN=8520065549:AAEa_MlnXGXJmEvOlQvS50_OvR9qsKpwwf4
+REACT_APP_TELEGRAM_CHAT_ID=-1003660641443
+
+
